listen to total  minted event and show it on UI

--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -23,6 +23,12 @@
   font-weight: bold;
 }
 
+.total {
+  margin: 10px;
+  font-size: 30px;
+  font-weight: bold;
+}
+
 .sub-text {
   font-size: 25px;
   color: white;
